test/error/error.input037.zc
Expected:, on line 3 of input037.zc
